--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ a:link, a:active{
     float: left;
 }
 .main{
+    color: white;
     height: 100vh;
     background: url('background.jpg') no-repeat center fixed;
     background-size: cover;
@@ -51,6 +52,7 @@ a:link, a:active{
     border-radius: 5px;
     padding : 5px;
     font-size: 15px;
+    color: white;
     background-color:  transparent;
 }
 #contact:hover{
