--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ a:link, a:active{
     left: 0;
     width: 100%;
     height: 40px;
-    background-color:rgba(243, 123, 179);
+    background-color:white;
     float: left;
 }
 .main{
@@ -41,7 +41,7 @@ a:link, a:active{
     height: 100vh;
     background: url('background.jpg') no-repeat center fixed;
     background-size: cover;
-    padding: 50% 20%;
+    padding: 30% 20%;
     width: 100%;
     float: left;
     
@@ -68,7 +68,7 @@ a:link, a:active{
     
 }
 .fa{
-    color: blue;
+    color: rgba(243, 123, 179);
     /* text-shadow: 1px 1px 2px blue; */
 }
 
@@ -89,4 +89,8 @@ li.social{
 }
 .section{
     margin: 10px 30px;
+}
+.tag{
+    font-size: 20px;
+    font-family: Dancing Script;
 }
